123/MyProject/src/objects/Lab__c.object
<CustomObject>
    <fields>
        <fullName>Attendance__c</fullName>
        <label>Attendance</label>
        <picklist>
            <picklistValues>
                <fullName>Present</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Absent</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <required>true</required>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Course__c</fullName>
        <label>Course</label>
        <picklist>
            <picklistValues>
                <fullName>Core Java</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cloud Computing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Oracle Financials</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Oracle ADF</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Oracle DBA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Spoken English</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Communication Skills</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Personality Development</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tailoring</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yoga</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tally ERP</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <required>true</required>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Date__c</fullName>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Faculty_Name__c</fullName>
        <label>Faculty Name</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>In_Time__c</fullName>
        <label>In-Time</label>
        <picklist>
            <picklistValues>
                <fullName>7 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1 PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2 PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3 PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4 PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5 PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6 PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7 PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8 PM</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Out_Time__c</fullName>
        <label>Out-Time</label>
        <picklist>
            <picklistValues>
                <fullName>8 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1 PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2 PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3 PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4 PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5 PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6 PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7 PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8 PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9 PM</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Performance__c</fullName>
        <label>Performance</label>
        <picklist>
            <picklistValues>
                <fullName>10%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>20%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>30%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>40%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>50%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>60%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>70%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>80%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>90%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>100%</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Remarks__c</fullName>
        <label>Remarks</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Student_Id__c</fullName>
        <label>Student Id</label>
        <referenceTo>Student__c</referenceTo>
        <relationshipLabel>Labs</relationshipLabel>
        <relationshipName>Labs</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Student_Name__c</fullName>
        <formula>Student_Id__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Student Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>System_No__c</fullName>
        <label>System No</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>13</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>14</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>15</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>16</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>17</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>18</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>19</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>20</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>21</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>22</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>23</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>24</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>25</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Task_Assigned__c</fullName>
        <label>Task Assigned</label>
        <type>TextArea</type>
    </fields>
    <label>Lab</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>L-{00000}</displayFormat>
        <label>Lab No</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Labs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>